# sheetsense-ai

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.local.yml  docker-compose.yml
docs/: architecture.md  design.md
services/mastra/: Dockerfile  package-lock.json  package.json  tsconfig.json
services/mastra/src/mastra/: index.ts  schemas.ts
services/mastra/src/mastra/agents/: analyst.ts  placeholder-agent.ts  query-planner.ts  schema-detector.ts  writer.ts
services/mastra/src/mastra/tools/: composio-factory.ts  execute-pandas.ts  tool-classification.ts
services/mastra/src/mastra/workflows/: sheetsense-pipeline.ts
services/sandbox/: Dockerfile  README.md  pyproject.toml
services/sandbox/src/sheetsense_sandbox/: __init__.py  config.py  main.py  marshal.py  runner.py  sandbox.py  sheets.py
services/sandbox/tests/: test_sandbox.py
