[project]
name = "sheetsense-sandbox"
version = "0.1.0"
description = "Python pandas sandbox sidecar for SheetSense AI. Runs LLM-written pandas code in a subprocess with rlimits and a restricted import hook."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # === API ===
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    # === Data analysis (loaded inside the sandbox subprocess too) ===
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.9.0",
    "scipy>=1.13.0",
    # === Integrations ===
    "composio-core>=0.5.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    # === Windows portability hint (the sandbox doesn't run natively on
    # Windows — POSIX resource module is required — but pydantic-settings
    # may resolve tzdata on Windows during type checking). ===
    "tzdata>=2024.1; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sheetsense_sandbox"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]
